--- a/dookala.html
+++ b/dookala.html
@@ -8,7 +8,7 @@
 {
 "name": "dookeela",
 "image": "https://dookeela.live/images/logo.png",
-"url": "http://tiny.cc/euuazz",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/main/Dookeela.LiveTV.w3u",
 "import": "true"
 },
 ]
