page_snooper.html

--- a/page_snooper.html
+++ b/page_snooper.html
@@ -11,7 +11,7 @@ tvg-type
 https://edge6a.v2h-cdn.com/3hd/3hd.stream/playlist.m3u8
 #EXTINF:-1 tvg-id="" tvg-name="CH 5" tvg-logo="https://moviektu.com/news/logotv/hd-ch5.png" group-title="ดิจิตอล",CH 5
 https://edge6a.v2h-cdn.com/tv5hd/tv5hd.stream/playlist.m3u8
-#EXTINF:-1 tvg-id="ch7.iptv36.my.to" tvg-name="CH 7" tvg-logo="https://moviektu.com/news/logotv/hd-ch7.png" group-title="ดิจิตอล",CH 7
+#EXTINF:-1 tvg-id="ch7.iptv36.my.to" tvg-name="CH 7" tvg-logo="https://moviektu.com/news/logotv/hd-ch7.png" ,CH 7
 #EXTVLCOPT:http-referrer=https://dooball2you.com
 https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/7hd/playlist.m3u8
 #EXTINF:-1 tvg-id="ch7.iptv36.my.to" tvg-name="CH 7-B" tvg-logo="https://moviektu.com/news/logotv/hd-ch7.png" group-title="ดิจิตอล",CH 7-B
