page_snooper.html

--- a/page_snooper.html
+++ b/page_snooper.html
@@ -7,7 +7,7 @@ tvg-type
 
 
 
-#EXTINF:-1 tvg-type="playlist" tvg-id="ch3.iptv36.my.to" tvg-name="" tvg-logo="https://moviektu.com/news/logotv/hd-ch3.png" group-title="ดิจิตอล",CH 3
+#EXTINF:-1 tvg-type="playlist" tvg-id="ch3.iptv36.my.to" tvg-name="" tvg-logo="https://moviektu.com/news/logotv/hd-ch3.png" group-title="ดิจิตอล" group-logo="https://v1.igetweb.com/www/aosat/article/art_42205644.png",CH 3
 https://edge6a.v2h-cdn.com/3hd/3hd.stream/playlist.m3u8
 #EXTINF:-1 tvg-id="" tvg-name="CH 5" tvg-logo="https://moviektu.com/news/logotv/hd-ch5.png" group-title="ดิจิตอล",CH 5
 https://edge6a.v2h-cdn.com/tv5hd/tv5hd.stream/playlist.m3u8
