--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -11,7 +11,7 @@
 "name": "TV Digital",
 "author": "Nexter",
 "image": "https://digital.nbtc.go.th/DigitalNBTC/media/source_media/LOGO_circle.png?ext=.png",
-"url": "https://pastebin.com/raw/AJM6tjku",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DigitalTV.txt",
 "import": "true"
 },
 
@@ -20,7 +20,7 @@
 "name": "FootBall ChanneL",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
-"url": "https://pastebin.com/Us7A4Taf",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter-PremierLeague.html",
 "import": "true"
 },
 
