--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -11,7 +11,7 @@
 "name": "TV Digital",
 "author": "Nexter",
 "image": "https://digital.nbtc.go.th/DigitalNBTC/media/source_media/LOGO_circle.png?ext=.png",
-"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DigitalTV.txt",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DigitalTV.html",
 "import": "true"
 },
 
@@ -57,7 +57,7 @@
 "name": "DADTV ALL",
 "author": "Nexter",
  "image": "https://pngpix.com/images/hd/iron-man-logo-circular-design-n5hyckjo39281rmm.jpg",
-"url": "https://pastebin.com/Qpq3fwhU",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DADTV.html",
 "import": "true"
 },
 
@@ -75,7 +75,7 @@
 "name": "WE ARE ONE ALL",
 "author": "Nexter",
 "image": "https://cdn.freebiesupply.com/logos/large/2x/one-1-logo-png-transparent.png",
-"url": "https://pastebin.com/cY6jpCP0",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/WE%20ARE%20ONE%20ALL.html",
 "import": "true"
 },
 
@@ -85,7 +85,7 @@
 "name": "Movie Channel",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/HBO_logo.svg/512px-HBO_logo.svg.png",
-"url": "https://pastebin.com/edit/g6wc2gYB",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/MovieChannel.html",
 "import": "false"
 },
 
@@ -94,7 +94,7 @@
 "name": "Kids Channel",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/commons/f/fe/CARTOON_NETWORK_logo.png",
-"url": "https://pastebin.com/06PhKi7E",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Kids.html",
 "import": "false"
 },
 
@@ -103,7 +103,7 @@
 "name": " Document Channel",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/History_Logo.svg/571px-History_Logo.svg.png",
-"url": "https://pastebin.com/PLAv0Juc",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Documentary.html",
 "import": "false"
 },
 
@@ -165,3 +165,24 @@
 
 ]
 }​
+
+
+
+
+
+
+
+<html>
+<head>
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" href="/icon.jpg" type="image/x-icon">
+  	<title>Tonnexter</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="description" content="Tonnexter"> 
+<meta http-equiv=refresh content=1;URL=https://www.google.co.th/>
+<body bgcolor="000000">
+<center>
+  <h2><img src="https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png"></h2>
+</center>
+</body>
+</html>
