--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -2,7 +2,7 @@
 "name": "Khun KamMEE Channel",
 "author": "[บ้านคูณคำมี แชนแนล]",
 "image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
-"url": "https://pastebin.com/qgDfZSr0",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
 "info": "[บ้านคูณคำมี แชนแนล]",
 
 "groups": [
