--- a/OldManIndex.html
+++ b/OldManIndex.html
@@ -10,41 +10,41 @@
 		 	{
 				"name": "♥ 🇹🇭 Olympic 🇹🇭♥",
 				"image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
-				"url": "https://pastebin.com/GYVpD1WL",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/olympic.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 		 	{
 				"name": "♥ 🇹🇭 DIGITAL TV 🇹🇭♥",
 				"image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
-				"url": "https://pastebin.com/Sm2Vwy7V",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/digital-tv%20by%20ais.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 			{
 				"name": "♥ 🇹🇭 SPORTS 🇹🇭♥",
 				"image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
-				"url": "https://pastebin.com/QxwDFw4d",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/sport.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 			{
 				"name": "♥ 🇹🇭 Movies Live 🇹🇭♥",
 				"image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
-				"url": "https://pastebin.com/mTza6v9R",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Movies%20Live.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
 			{
 				"name": "♥ 🇹🇭 Documentary 🇹🇭♥",
 				"image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
-				"url": "https://pastebin.com/KHrKpqGb",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/documentary.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 			{
 				"name": "♥ 🇹🇭 GoodTV 🇹🇭♥",
 				"image": "https://static.vecteezy.com/system/resources/previews/019/956/198/original/netflix-transparent-netflix-free-free-png.png",
-				"url": "https://pastebin.com/6Sj1YnLt",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/good-tv.html",
 				"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 				"import": false},
 
