--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -147,7 +147,7 @@
 
 { "name"              :     "MOVIE & SERIES", "author": "Nexter",
 "image"             :     "https://png.pngtree.com/png-clipart/20220509/original/pngtree-live-streaming-png-logo-png-image_7667572.png",
-"url"               :     "https://pastebin.com/bQLidaua",
+"url"               :     "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/MOVIeSERIES.html",
 "import": "false" 
 },
 
