--- a/DADTV.html
+++ b/DADTV.html
@@ -1,7 +1,7 @@
 { "name": "DADATV", "author": "DADATV ดูฟรี ห้ามจำหน่าย",
  "parental": "true", 
 "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg", 
-"url": "https://pastebin.com/edit/Qpq3fwhU", 
+"url": "https://pastebin.com/Qpq3fwhU", 
 "info": "DADATV ดูฟรี ห้ามจำหน่าย", "groups": [ { "name": "หนังออนไลน์", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg",
  "url": "https://pastebin.com/by5jCEra" },
  { "name": "สารคดี", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg", 
