--- a/DADTV.html
+++ b/DADTV.html
@@ -3,17 +3,17 @@
 "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg", 
 "url": "https://pastebin.com/Qpq3fwhU", 
 "info": "DADATV ดูฟรี ห้ามจำหน่าย", "groups": [ { "name": "หนังออนไลน์", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg",
- "url": "https://pastebin.com/by5jCEra" },
+ "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DAD-Movie.html" },
  { "name": "สารคดี", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg", 
- "url": "https://pastebin.com/ewX9kqx4" },
+ "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DAD-Documentary.html" },
  { "name": "กีฬา", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg",
- "url": "https://pastebin.com/3My349sU" },
+ "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DAD-Sport.html" },
  { "name": "ดิจิตอล", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg", 
- "url": "https://pastebin.com/qvEtJhG6" },
+ "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DAD-Digital.html" },
  { "name": "การ์ตูน", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg", 
- "url": "https://pastebin.com/QuWfytN6" }, 
+ "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DAD-Carton.html" }, 
  { "name": "Sport Channel", "image": "https://i.pinimg.com/originals/2e/f9/81/2ef9818832421a09ba7b0672e494e13e.jpg", 
- "url": "https://pastebin.com/edit/r9vt3RfL" },
+ "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Sports-Nexter.html" },
 
 
  ] }
