--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -42,7 +42,7 @@
 "name":	"Sports Nexter ALLChannel ",
 "author":  "Nexter",
 "image":	"https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/2560px-Nexter_Logo.svg.png",
-"url":   "https://pastebin.com/r9vt3RfL",
+"url":   "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Sports%20Nexter%20ALLChannel.html",
 "import": "true"
 },
 
@@ -51,7 +51,7 @@
 "name": "Thai Premier League CH",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/th/2/28/Hilux_Revo_Thai_League_2021%E2%80%9322.png",
-"url": "https://pastebin.com/Xqpv6fuF",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Ball%20Thai%20League.html",
 "import": "false"
 },
 
