--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -3,13 +3,7 @@
 "image": "https://v1.igetweb.com/www/aosat/article/art_42205644.png",
 "url": "https://pastebin.com/raw/AJM6tjku",
 "stations" : [ 
-{ 
-"name": "Thairath TV",  
-"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0013_R.png", 
-"url": "https://inwiptv.com/player_demo.php?channel=27138", 
-"referer": "",
-"playInNatPlayer": "true" 
-},
+
 { 
 "name": "NBT2HD",  
 "image": "https://upload.wikimedia.org/wikipedia/commons/9/9d/NBT_Logo.png", 
@@ -150,12 +144,46 @@
 },   
 
 { 
+"name": "Thairath TV (1)",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0013_R.png", 
+"url": "http://appdootv2.dootvde.com:1935/live/50023_thairath_hd.stream.smil/playlist.m3u8", 
+"referer": "",
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "Thairath TV (2)",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0013_R.png", 
+"url": "https://tv.trueid.net/th-th/live/thairathtv-hd", 
+"referer": "https://tv.trueid.net/",
+"playInNatPlayer": "true" 
+},
+
+
+{ 
 "name": "CH3 HD",  
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/LOGO3HD.PNG", 
 "url": "https://www.inwiptv.com/player_demo.php?channel=27137", 
 "referer": "",
 "playInNatPlayer": "true" 
 },   
+
+
+{ 
+"name": "CH3 HD(1)",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/LOGO3HD.PNG", 
+"url": "https://edge6a.v2h-cdn.com/3hd/3hd.stream/playlist.m3u8", 
+"referer": "",
+"playInNatPlayer": "true" 
+},  
+
+{ 
+"name": "CH3 HD(2)",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/LOGO3HD.PNG", 
+"url": "https://tv.trueid.net/th-th/live/ch3-hd", 
+"referer": "https://tv.trueid.net/",
+"playInNatPlayer": "true" 
+},  
 
 { 
 "name": "Amarin TV",  
