--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -39,6 +39,15 @@
 
 
 {
+				"name": "Nexter-PremierLeague3",
+				"image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterPremierLeague2.html",
+				"info": "Nexter-PremierLeague",
+				"import": false
+},
+
+
+{
 "name":	"Sports Nexter ALLChannel ",
 "author":  "Nexter",
 "image":	"https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/2560px-Nexter_Logo.svg.png",
