--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -111,8 +111,17 @@
 "playInNatPlayer": "true" 
 },   
 
+
 { 
 "name": "MONO 29",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0016.png", 
+"url": "https://streaming.monomax.me/Mono29LiveStream/ngrp:myStream_all/chunklist_b6628000.m3u8", 
+"referer": "",
+"playInNatPlayer": "true" 
+},   
+
+{ 
+"name": "MONO 29 (1)",  
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0016.png", 
 "url": "https://edge4-bkk.3bb.co.th:9443/Stream_HLSMONO29_720P/mono29hls_720TH.stream/chunklist_w1512931905.m3u8", 
 "referer": "",
@@ -130,10 +139,20 @@
 { 
 "name": "ONE 31",  
 "image": "https://assets.oned.net/3/logo_one31.png", 
-"url": "https://bcovlive-a.akamaihd.net/e11d0db446fe41fe9be61157033f9325/ap-southeast-1/6415628290001/profile_0/chunklist.m3u8", 
+"url": "https://edge6a.v2h-cdn.com/onehd/onehd.stream/playlist.m3u8", 
 "referer": "",
 "playInNatPlayer": "true" 
 },   
+
+
+{ 
+"name": "ONE 31 (1)",  
+"image": "https://assets.oned.net/3/logo_one31.png", 
+"url": "https://bcovlive-a.akamaihd.net/e11d0db446fe41fe9be61157033f9325/ap-southeast-1/6415628290001/profile_0/chunklist.m3u8", 
+"referer": "",
+"playInNatPlayer": "true" 
+},  
+
 
 { 
 "name": "Thairath TV",  
@@ -151,6 +170,7 @@
 "playInNatPlayer": "true" 
 },
 
+
 { 
 "name": "CH3 HD",  
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/LOGO3HD.PNG", 
@@ -166,15 +186,25 @@
 "url": "https://edge6a.v2h-cdn.com/3hd/3hd.stream/playlist.m3u8", 
 "referer": "",
 "playInNatPlayer": "true" 
-},   
-
+},  
+ 
 { 
 "name": "Amarin TV",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/AmarinTV_NEW512.png", 
+"url": "https://edge6a.v2h-cdn.com/amarinhd/amarinhd.stream/playlist.m3u8", 
+"referer": "",
+"playInNatPlayer": "true" 
+},   
+
+
+{ 
+"name": "Amarin TV (1)",  
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE//channelicon/AmarinTV_NEW512.png", 
 "url": "https://inwiptv.com/player_demo.php?channel=27135", 
 "referer": "",
 "playInNatPlayer": "true" 
-},   
+},
+
 
 { 
 "name": "CH7 HD",  
@@ -185,12 +215,37 @@
 },   
 
 { 
+"name": "CH7 HD (1)",  
+"image": "https://static.ch7.com/images/theme2019/icon/ic_logo_ch7hd.png?a=1", 
+"url": "https://live-cdn-hwc.ch7.com/livech7hd/HD_1080p.m3u8?vhost=streaming-hwc.ch7.com", 
+"referer": "",
+"playInNatPlayer": "true" 
+},   
+
+{ 
 "name": "PPTV HD",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/R_0022.png", 
+"url": "https://edge6a.v2h-cdn.com/pptv/pptv.stream/playlist.m3u8", 
+"referer": "",
+"playInNatPlayer": "true" 
+}, 
+{ 
+"name": "PPTV HD (1)",  
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/R_0022.png", 
 "url": "https://www.ball24.tv/allchannel/?id=pptv", 
 "referer": "",
 "playInNatPlayer": "true" 
 },   
+
+{ 
+"name": "PPTV HD (2)",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/R_0022.png", 
+"url": "http://appdootv2.dootvde.com:1935/live/50026_pptv_hd.stream.smil/playlist.m3u8", 
+"referer": "",
+"playInNatPlayer": "true" 
+},  
+
+
 
 { 
 "name": "NBT Northeast",  
