--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -62,6 +62,51 @@
     },
  
 
+
+{ 
+"name"		: "True Premier Football HD 1", 
+"image"		: "https://dookeela.live/uploads/1664499665.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 2", 
+"image"		: "https://dookeela.live/uploads/1664499673.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 3", 
+"image"		: "https://dookeela.live/uploads/1664499681.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 4", 
+"image"		: "https://dookeela.live/uploads/1664499692.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 5", 
+"image"		: "https://dookeela.live/uploads/1664499700.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+
+
+
+
 {
 				"name": " EPL-1",
 				"image": "https://www.dropbox.com/scl/fi/m39ntjxh0s3b4vilskmfc/epl1.png?rlkey=o0nbk82n3bpqil97lg8vhp6k2&dl=1",
