--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -60,7 +60,51 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
- 
+
+
+{ 
+"name"		: "True Premier Football HD 1", 
+"image"		: "https://dookeela.live/uploads/1664499665.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 2", 
+"image"		: "https://dookeela.live/uploads/1664499673.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 3", 
+"image"		: "https://dookeela.live/uploads/1664499681.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 4", 
+"image"		: "https://dookeela.live/uploads/1664499692.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 5", 
+"image"		: "https://dookeela.live/uploads/1664499700.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+
+
+
 
 {
 				"name": " EPL-1",
