--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -127,6 +127,16 @@
 
 
 {
+"name": "Watchlakorn(ย้อนหลัง)",
+"author": "Nexter",
+"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSgnV9n5glTl6nvkfU22sh0woDFv8LvRjoVQ&usqp=CAU",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Watchlakorn.html",
+"import": "true"
+},
+
+
+
+{
 "name": "หนังออนไลน์",
 "author": "Nexter",
 "image": "https://t3.ftcdn.net/jpg/04/23/92/78/360_F_423927894_T9UIBqoqC1XOwLXlYa8j38VyxLUxO8ii.jpg",
