--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -127,7 +127,7 @@
 
 
 {
-"name": "Watchlakorn(ย้อนหลัง)",
+"name": "Watch IPTV",
 "author": "Nexter",
 "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSgnV9n5glTl6nvkfU22sh0woDFv8LvRjoVQ&usqp=CAU",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Watchlakorn.html",
