--- a/Watchlakorn.html
+++ b/Watchlakorn.html
@@ -1,73 +1,36 @@
 {
-		"name": "ละครย้อนหลังWatchlakorn",
+		"name": "WatchIPTV",
 		"author": "Nexter",
 		"image": "https://cdn.watchlakorn.in/images/video_logo.png",
 		"groups":  [
-		{
-			"name": "ละคร ONAIR",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_ละคร-ONAIR.w3u",
+
+	{
+			"name": "ปันใจ ปันสุข ปันสนุก",
+			"image": "https://img2.pic.in.th/pic/440939101_831760252166161_7288880500019888653_n.jpeg",
+			"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Punsuk.html",
 			"import": "false"
 		},
-		{
+
+
+	{
+			"name": "ปันใจ ปันสุข ปันสนุก Twooo",
+			"image": "https://img2.pic.in.th/pic/440939101_831760252166161_7288880500019888653_n.jpeg",
+			"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/wiseonline.html",
+			"import": "false"
+		},
+
+
+	{
 			"name": "ละคร",
 			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
 			"url": "https://drive.google.com/uc?id=1-9Se0u6C5DXSiNwyErNhh1bgGxSIU_HX",
 			"import": "false"
 		},
-		{
-			"name": "ละคร สำรอง",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_ละคร.w3u",
-			"import": "false"
-		},
-		{
-			"name": "ซิทคอม",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_ซิทคอม.w3u",
-			"import": "false"
-		},
-			{
-			"name": "เรียลลิตี้",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_เรียลลิตี้.w3u",
-			"import": "false"
-		},
-		{
-			"name": "ละครเก่า",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_ละครเก่า.w3u",
-			"import": "false"
-		},
-		{
-			"name": "วาไรตี้ เกมโชว์",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_%E0%B8%A7%E0%B8%B2%E0%B9%84%E0%B8%A3%E0%B8%95%E0%B8%B5%E0%B9%89%20%E0%B9%80%E0%B8%81%E0%B8%A1%E0%B9%82%E0%B8%8A%E0%B8%A7%E0%B9%8C.w3u",
-			"import": "false"
-		},
-		{
-			"name": "กีฬา",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_กีฬา.w3u",
-			"import": "false"
-		},
-		{
-			"name": "ข่าว",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_ข่าวและเหตุการณ์.w3u",
-			"import": "false"
-		},
-		{
-			"name": "คอนเสิร์ต",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_คอนเสิร์ต.w3u",
-			"import": "false"
-		},
-		{
-			"name": "สารคดี",
-			"image": "https://cdn.watchlakorn.in/images/video_logo.png",
-			"url": "https://raw.githubusercontent.com/oungoungdoonung/123456a/main/freeforyou/wiseplayพูดคุยbyอุ๋งอุ๋ง/Watchlakorn_สาระความรู้.w3u",
-			"import": "false"
-		}
+
+
+
+		
+
+
 	  ]
 	},
