--- a/Watchlakorn.html
+++ b/Watchlakorn.html
@@ -4,6 +4,16 @@
 		"image": "https://cdn.watchlakorn.in/images/video_logo.png",
 		"groups":  [
 
+
+	{
+			"name": "DooDee IPTV",
+			"image": "https://i.imgur.com/oCWxQwF.gif",
+			"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Doodee.html",
+			"import": "false"
+		},
+
+
+
 	{
 			"name": "ปันใจ ปันสุข ปันสนุก",
 			"image": "https://img2.pic.in.th/pic/440939101_831760252166161_7288880500019888653_n.jpeg",
