--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -63,6 +63,123 @@
  
 
 
+
+
+{"name":"True Premier 1-A🇹🇭",
+"image":"https://i.imgur.com/Tjjl378.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 1-B🇹🇭",
+"image":"https://i.imgur.com/Tjjl378.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 1-C🇹🇭",
+"image":"https://i.imgur.com/Tjjl378.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"info": "NexterPremierLeague",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 1-D🇹🇭",
+"image":"https://i.imgur.com/Tjjl378.png",
+"url":"https://www.ball24.tv/allchannel/?id=epl1",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 1-E🇹🇭",
+"image":"https://i.imgur.com/Tjjl378.png",
+"url":"https://www.livedoomovies.com:4432/02_PremierHD1_720p/chunklist.m3u8",
+"referer": "https://www.madoohd.com/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-A🇹🇭",
+"image":"https://i.imgur.com/rXROqp8.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-B🇹🇭",
+"image":"https://i.imgur.com/rXROqp8.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-C🇹🇭",
+"image":"https://i.imgur.com/rXROqp8.png",
+"url":"https://www.livedoomovies.com:4432/02_PremierHD2_720p/chunklist.m3u8",
+"referer": "https://www.madoohd.com/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-D🇹🇭",
+"image":"https://i.imgur.com/rXROqp8.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-2/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"info": "NexterPremierLeague",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 2-E🇹🇭",
+"image":"https://i.imgur.com/rXROqp8.png",
+"url":"https://www.ball24.tv/allchannel/?id=epl2",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 3-A🇹🇭",
+"image":"https://i.imgur.com/gdQ0wRJ.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 3-B🇹🇭",
+"image":"https://i.imgur.com/gdQ0wRJ.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-3/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"info": "NexterPremierLeague",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 4-A🇹🇭",
+"image":"https://i.imgur.com/6lrDy1m.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 4-B🇹🇭",
+"image":"https://i.imgur.com/6lrDy1m.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-4/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"info": "NexterPremierLeague",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 5-A🇹🇭",
+"image":"https://i.imgur.com/f7TjBwW.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"info": "NexterPremierLeague",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 5-B🇹🇭",
+"image":"https://i.imgur.com/f7TjBwW.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-5/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"info": "NexterPremierLeague",
+"playInNatPlayer": "true"},
+
+
+
+
+
+
 { 
 "name"		: "True Premier Football HD 1", 
 "image"		: "https://dookeela.live/uploads/1664499665.png", 
