--- a/MOVIeSERIES.html
+++ b/MOVIeSERIES.html
@@ -21,6 +21,30 @@
 "import": false
 },
 
+
+{
+"name": "MOVEZONE Movie",
+"image": "https://png.pngtree.com/png-clipart/20220509/original/pngtree-live-streaming-png-logo-png-image_7667572.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/MOVEZONE.html",
+"import": false
+},
+
+
+{
+"name": "9Lhonge MovieWar",
+"image": "https://png.pngtree.com/png-clipart/20220509/original/pngtree-live-streaming-png-logo-png-image_7667572.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/9Lhonge_MovieWar.html",
+"import": false
+},
+
+
+{
+"name": "Doofree Movie",
+"image": "https://png.pngtree.com/png-clipart/20220509/original/pngtree-live-streaming-png-logo-png-image_7667572.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DoofreeMovie.html",
+"import": false
+},
+
  
  
 ]
