--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -68,7 +68,7 @@
 {
 "name": "Nexter-Movieess",
 "author": "Nexter",
-"image": "https://static.vecteezy.com/system/resources/previews/020/336/373/non_2x/netflix-logo-netflix-icon-free-free-vector.jpg",
+"image": "https://t3.ftcdn.net/jpg/04/06/92/60/360_F_406926005_dGy1iIhhadwEGOTFJjw2q1ir7lrYjg3C.jpg",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
 "import": "true"
 },
