--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -68,7 +68,7 @@
 {
 "name": "Nexter-Movieess",
 "author": "Nexter",
-"image": "https://t3.ftcdn.net/jpg/04/06/92/60/360_F_406926005_dGy1iIhhadwEGOTFJjw2q1ir7lrYjg3C.jpg",
+"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/798px-Nexter_Logo.svg.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
 "import": "true"
 },
