--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -16,6 +16,18 @@
 },
 
 
+
+{
+"name": "Movie <โรงหนังของแล้ม>",
+"author": "Nexter",
+"image": "https://leam.tech/assets/navbar/logo.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
+"import": "true"
+},
+
+
+
+
 {
 "name": "FootBall ChanneL",
 "author": "Nexter",
@@ -61,16 +73,6 @@
 "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/CNN.svg/1200px-CNN.svg.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/News%20Channel.html",
 "import": "false"
-},
-
-
-
-{
-"name": "Nexter-Movieess",
-"author": "Nexter",
-"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/798px-Nexter_Logo.svg.png",
-"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
-"import": "true"
 },
 
 
