--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -17,6 +17,21 @@ url:"https://main.24playerhd.com/m3u8/b67f2a16c4c3b672dd6a88a6/b67f2a16c4c3b672d
 },
 
 
+
+ {  
+name:"The Crow - อีกาพญายม (2024) [Zoom]",
+image:"https://movie.server-cdn-streaming.com/api/uploads/movie/5289/20240825021743IYZJ.jpg",
+url:"https://movie.server-cdn-streaming.com/api/uploads/movie/5289/20240825021743IYZJ.jpg",
+"referer": "https://www.24-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+"playInNatPlayer": "true"
+},
+
+
+
+ 
+
+
  
 
 
