--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,6 +2,8 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://leam.tech/assets/navbar/logo.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
+"author": "LeamLeam",
+"info": "โรงหนังของแล้ม",
 "stations" : [
 
 
