--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,8 +6,19 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
+ 
+
+ {  
+name:"047",
+image:"https://d6ce0no7ktiq.cloudfront.net/images/stickers/994.png",
+url:"https://u.pcloud.link/publink/show?code=XZTtmI0ZgOO6g3XtdbVK4WU8uaj3FHt4Eoky",
+"referer": "https://www.24-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 
+ 
 
  {  
 name:"Nowhere (2023)",
