--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,6 +6,33 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
+  
+
+
+
+  {  
+name:"Accident Man: Hitman's Holiday แอ็คซิเด้นท์แมน สุขสันต์วันมือปืน (2022)",
+image:"https://image.tmdb.org/t/p/w600_and_h900_bestv2/Acpmcd1fpiPfKCrznkoWgzwC1Ej.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Accident_Man_Hitman_s_Holiday_2022/Accident_Man_Hitman_s_Holiday_2022_th_1080p.mp4/chunk.m3u8?nimblesessionid=118187917&wmsAuthSign=c2VydmVyX3RpbWU9OS8yMC8yMDI0IDM6MDk6MDcgQU0maGFzaF92YWx1ZT1Yc0JjZXVTWDhUUXdiTGZqOC8wL2dRPT0mdmFsaWRtaW51dGVzPTU=",
+"referer": "https://www.24-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+  
+  {  
+name:"Chappie จักรกลเปลี่ยนโลก (2015)",
+image:"https://m1free.inwstream.com:1936/movie2/Chappie%202015/Chappie%202015%20th%201080p%20fw.m4v/chunk.m3u8?nimblesessionid=118187804&wmsAuthSign=c2VydmVyX3RpbWU9OS8yMC8yMDI0IDI6NTk6NTUgQU0maGFzaF92YWx1ZT1aT1Q2OFFUdjBadEQzdWVBVXVHcWRBPT0mdmFsaWRtaW51dGVzPTU=",
+url:"https://m1free.inwstream.com:1936/movie2/Chappie%202015/Chappie%202015%20th%201080p%20fw.m4v/chunk.m3u8?nimblesessionid=118187804&wmsAuthSign=c2VydmVyX3RpbWU9OS8yMC8yMDI0IDI6NTk6NTUgQU0maGFzaF92YWx1ZT1aT1Q2OFFUdjBadEQzdWVBVXVHcWRBPT0mdmFsaWRtaW51dGVzPTU=",
+"referer": "https://www.24-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+  
 
 
   {  
