--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -35,7 +35,7 @@ url:"https://m1free.inwstream.com:1936/movie3/Accident_Man_Hitman_s_Holiday_2022
   
   {  
 name:"Chappie จักรกลเปลี่ยนโลก (2015)",
-image:"https://m1free.inwstream.com:1936/movie2/Chappie%202015/Chappie%202015%20th%201080p%20fw.m4v/chunk.m3u8?nimblesessionid=118187804&wmsAuthSign=c2VydmVyX3RpbWU9OS8yMC8yMDI0IDI6NTk6NTUgQU0maGFzaF92YWx1ZT1aT1Q2OFFUdjBadEQzdWVBVXVHcWRBPT0mdmFsaWRtaW51dGVzPTU=",
+image:"https://movie.server-cdn-streaming.com/api/uploads/movie/804/20210730134709sDUP.jpg",
 url:"https://m1free.inwstream.com:1936/movie2/Chappie%202015/Chappie%202015%20th%201080p%20fw.m4v/chunk.m3u8?nimblesessionid=118187804&wmsAuthSign=c2VydmVyX3RpbWU9OS8yMC8yMDI0IDI6NTk6NTUgQU0maGFzaF92YWx1ZT1aT1Q2OFFUdjBadEQzdWVBVXVHcWRBPT0mdmFsaWRtaW51dGVzPTU=",
 "referer": "https://fw4free.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
