--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -49,6 +49,16 @@
 
 
 {
+				"name": "Nexter-BeInSport-Thailand",
+				"image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/NexterBeINSport.html",
+				"info": "Nexter-PremierLeague",
+				"import": true
+},
+
+
+
+{
 "name":	"Sports Nexter ALLChannel ",
 "author":  "Nexter",
 "image":	"https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/2560px-Nexter_Logo.svg.png",
@@ -60,9 +70,9 @@
 {
 "name": "Thai Premier League CH",
 "author": "Nexter",
-"image": "https://upload.wikimedia.org/wikipedia/th/2/28/Hilux_Revo_Thai_League_2021%E2%80%9322.png",
+"image": "https://f.ptcdn.info/991/075/000/r5e38kk32MWyWI02h5T-o.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Ball%20Thai%20League.html",
-"import": "false"
+"import": "true"
 },
 
 
