--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -50,7 +50,7 @@
 
 {
 				"name": "Nexter-BeInSport-Thailand",
-				"image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
+				"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Bein_sport_logo.png/2560px-Bein_sport_logo.png",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/NexterBeINSport.html",
 				"info": "Nexter-PremierLeague",
 				"import": true
