--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -53,7 +53,7 @@
 				"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Bein_sport_logo.png/2560px-Bein_sport_logo.png",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/NexterBeINSport.html",
 				"info": "Nexter-PremierLeague",
-				"import": true
+				"import": false
 },
 
 
