--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -172,7 +172,7 @@
 { 
 "name": "T Sports 7",  
 "image": "https://www.tsports7.com/logo.png", 
-"url": "https://www.ball24.tv/allchannel/?id=tsports", 
+"url": "https://edge6a.v2h-cdn.com/t_sport/t_sport.stream/playlist.m3u8", 
 "referer": "",
 "playInNatPlayer": "true" 
 },   
@@ -920,27 +920,32 @@ url:"https://edge6a.v2h-cdn.com/jkn18/jkn18.stream/playlist.m3u8",
 "userAgent":"Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1",
 "playInNatPlayer":"true"},
 
-{"name":"PoliceTV",
-"image":"https://i.imgur.com/NXs4rld.png",
-"url":"https://cdn-th-vip.livestreaming.in.th/policetv/policetv/playlist.m3u8",
-"playInNatPlayer":"true"},
 
-{"name":"Cable 37",
-"image":"https://i.imgur.com/7ON3fBY.png",
-"url":"http://www5.cabletv.co.th/StreamToCTV/cablechannel/playlist.m3u8",
-"playInNatPlayer":"true"},
-
-{"name":"สุวรรณภูมิ TV",
-"image":"https://i.imgur.com/JfHbnRf.png",
-"url":"https://live.bangkokstream.com:19360/suwannabhumi/suwannabhumi.m3u8",
-"playInNatPlayer":"true"},
-
-{"name":"FARM TV",
-"image":"https://i.imgur.com/Uz9L5sR.png",
-"url":"https://www.inwiptv.com/player_demo.php?channel=27315",
+{"name":"TSports-A🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://www.inwiptv.com/player_demo.php?channel=27186",
 "referer":"https://www.inwiptv.com/",
-"userAgent":"Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.79 Safari/537.36 Maxthon/5.2.7.3000",
+"userAgent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36",
+"desktop":	"true",
 "playInNatPlayer":"true"},
+
+{"name": "TSports-B🇹🇭",
+"image": "https://i.imgur.com/TFc4WRE.png",
+"url":"https://aisplay.ais.co.th/portal/live?vid=627a27b26dbfe345cfc8a27f",
+"referer":"https://ais-vidnt.com",
+userAgent:"Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1",
+"playInNatPlayer": "true"},
+
+{"name":"TSports-C🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://edge6a.v2h-cdn.com/t_sport/t_sport.stream/playlist.m3u8",
+"playInNatPlayer":"true"},
+
+{"name":"TSports-D🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://dookeela.live/live-tv/tsports7",
+"playInNatPlayer":"true"},
+
 
 
 
