--- a/NexterPremierLeague2.html
+++ b/NexterPremierLeague2.html
@@ -598,5 +598,31 @@
 "playInNatPlayer":"true"},
 
 
+{"name":"TSports-A🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://www.inwiptv.com/player_demo.php?channel=27186",
+"referer":"https://www.inwiptv.com/",
+"userAgent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36",
+"desktop":	"true",
+"playInNatPlayer":"true"},
+
+{"name": "TSports-B🇹🇭",
+"image": "https://i.imgur.com/TFc4WRE.png",
+"url":"https://aisplay.ais.co.th/portal/live?vid=627a27b26dbfe345cfc8a27f",
+"referer":"https://ais-vidnt.com",
+userAgent:"Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1",
+"playInNatPlayer": "true"},
+
+{"name":"TSports-C🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://edge6a.v2h-cdn.com/t_sport/t_sport.stream/playlist.m3u8",
+"playInNatPlayer":"true"},
+
+{"name":"TSports-D🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://dookeela.live/live-tv/tsports7",
+"playInNatPlayer":"true"},
+
+
 ]
 }
