--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -9,6 +9,17 @@
 
  "stations": [
 
+{
+     "name": "True Premier Football 1 HD",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
+	 "userAgent": "exoplayer_video",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+
 			{
      "name": "True Premier Football 1",
      "image": "https://dookeela.live/uploads/1664499665.png",
