--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -73,6 +73,52 @@
     },
 
 
+{  
+name:"Premier Football HD 1",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://www.livedoomovies.com:4432/02_PremierHD1_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+{  
+name:"Premier Football HD 2",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://www.livedoomovies.com:4432/02_PremierHD2_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+{  
+name:"Premier Football HD 3",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://219.livedoomovies.com:4431/02_PremierHD3_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+{  
+name:"Premier Football HD 4",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl4.png",
+url:"https://sport.livedoomovies.com:4432/02_PremierHD4_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+{  
+name:"Premier Football HD 5",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl5.png",
+url:"https://sport.livedoomovies.com:4432/02_PremierHD5_720p/chunklist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
 
 {"name":"True Premier 1-A🇹🇭",
 "image":"https://dookeela.live/uploads/1664499665.png",
