--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -12,7 +12,7 @@
 {
      "name": "True Premier Football 1 HD",
      "image": "https://dookeela.live/uploads/1664499665.png",
-     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8?",
+     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
